# libatmosphere

./: CMakeLists.txt  README.md
debian/: control
src/: atmosphere.cpp  atmosphere.h  atmosphere.pc.in
